<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">博联智能插座</string>
    <string name="warn_sdcard_miss">SD卡无法读取，请检查SD卡。</string>
    <string name="use_rom">使用ROM存储</string>
    <string name="errorExit">返回状态异常，请尝试退出并重试登陆。</string>
    <string name="timeOut">网络延迟，请检查网络或重试。</string>
    <string name="timeOut2">无法连接到设备请尝试退出并重新登陆。</string>
    <string name="errorConnWifi">未检测到WIFI信号，请先连接到无线路由器。</string>
    <string name="errorDeviceDonw">未能连接到设备，请检查设备状态。</string>
    <string name="set_succss">设置成功</string>
    <string name="log_error">登陆异常，尝试刷新并重试。</string>
    <string name="show_pass">显示密码</string>
    <string name="find_new">发现新版本,为不影响正常使用建议更新。</string>
    <string name="double_click_exit">在按一次退出程序</string>
    <string name="downUpdating">正在下载更新</string>
    <string name="updateFail">下载新版本失败</string>
    <string name="exit">退出</string>
    <string name="shebeiliebiao">设备列表</string>
    <string name="guanlishebei">管理设备</string>
    <string name="xinshebei">新设备</string>
    <string name="rename_device_name">重命名设备名称</string>
    <string name="yes">确定</string>
    <string name="loging">正在登陆…</string>
    <string name="reloging">正在登陆…</string>
    <string name="cancel">取消</string>
    <string name="wangt_del_device">想要删除该设备?</string>
    <string name="log_from_ser">正在登陆…</string>
    <string name="log_from_local">正在登陆…</string>
    <string name="refresh">刷新</string>
    <string name="refreshing">刷新中…</string>
    <string name="check_the_wifi_status">请检查wifi是否打开</string>
    <string name="device_lineout">设备异常或离线</string>
    <string name="choose_devece_icon">请选择设备图标</string>
    <string name="use_default">使用默认</string>
    <string name="choose_another">另外选择</string>
    <string name="config_ing">正在配置…</string>
    <string name="xitong">系统</string>
    <string name="fuwu">服务</string>
    <string name="peizhi">配置</string>
    <string name="wifiList">Wifi列表</string>
    <string name="scanning">扫描中…</string>
    <string name="configTo">配置到</string>
    <string name="configing">配置中…</string>
    <string name="configDone">配置完成</string>
    <string name="configSuc">配置成功</string>
    <string name="configFal">"配置结束。请检查设备黄灯状态。
常亮：配置成功，请回到系统页刷新查看。
慢闪：设备无法配置到路由，请检查密码后重启设备并配置。
快闪：设备未收到配置请求，请重启设备并配置。"</string>
    <string name="reTry">重试</string>
    <string name="wifi_ssid">Wifi网络:</string>
    <string name="err_ssid">SSID里面包括不支持的字符（中文），会导致配置不成功。</string>
    <string name="delayDo">延迟执行</string>
    <string name="dataReading">数据读取中…</string>
    <string name="slect_a_time">请选择一个时间</string>
    <string name="wait_data_done">请等待数据读取完成</string>
    <string name="saving">保存中…</string>
    <string name="delay_unopen_or_done">延迟未开启或已执行完毕</string>
    <string name="the_swtich_will_open">分钟后插座将(开启)</string>
    <string name="the_swtich_will_close">分钟后插座将(关闭)</string>
    <string name="wait_do_done">请等待执行完成</string>
    <string name="time_task">定时任务</string>
    <string name="device_info">设备信息</string>
    <string name="seting">正在设置…</string>
    <string name="error_max_7_count_list">发现错误:最多只能添加7条记录。</string>
    <string name="del_this_task">想要删除该条任务?</string>
    <string name="deleting">删除中…</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="monday_mini">一</string>
    <string name="tuesday_mini">二</string>
    <string name="wednesday_mini">三</string>
    <string name="thursday_mini">四</string>
    <string name="friday_mini">五</string>
    <string name="saturday_mini">六</string>
    <string name="sunday_mini">日</string>
    <string name="add_new_task">添加新任务</string>
    <string name="nerver">从不</string>
    <string name="edit_task">编辑任务</string>
    <string name="repeat_circle">重复周期</string>
    <string name="enable">启用</string>
    <string name="repeat">重复</string>
    <string name="setTime">设定时间</string>
    <string name="unEnaable">未启用</string>
    <string name="notis">提示:</string>
    <string name="m_5_min">5分钟</string>
    <string name="m_10_min">10分钟</string>
    <string name="m_30_min">30分钟</string>
    <string name="m_60_min">60分钟</string>
    <string name="m_90_min">90分钟</string>
    <string name="m_120_min">120分钟</string>
    <string name="min">分钟</string>
    <string name="icon">图标</string>
    <string name="name">名称</string>
    <string name="openTime">打开时间</string>
    <string name="CloseTime">关闭时间</string>
    <string name="Close">关闭</string>
    <string name="Open">打开</string>
    <string name="opration">运行中</string>
    <string name="unopration">未运行</string>
    <string name="op_finish">执行完成</string>
    <string name="open_done">打开已执行</string>
    <string name="close_done">关闭已执行</string>
    <string name="lock_notice">设备锁定之后，未添加该设备的终端将无法搜索到该设备，确定锁定该设备？（确定后保存生效）</string>
    <string name="unlock_notice">设备解锁之后，所有人都可搜索到该设备，可能会存在安全隐患，确定解锁？（确定后保存生效）</string>
    <string name="lock">锁定设备</string>
    <string name="choose_pic">选择图标</string>
    <string name="from_album">从图库获取</string>
    <string name="from_camera">从相机获取</string>
    <string name="start_config">开始配置</string>
    <string name="pwd">密码:</string>
    <string name="try_againing">重试中…</string>
    <string name="share_android_link">分享Android链接</string>
    <string name="share_ios_link">分享IOS链接</string>
    <string name="by_mes">通过短信</string>
    <string name="by_email">通过邮件</string>
    <string name="by_email_title">分享博联智能插座下载地址</string>
    <string name="delayIndex">延时</string>
    <string name="timerIndex">定时</string>
    <string name="serverShareNoty">"点击Logo分享App下载链接,
或者扫描二维码直接下载。"</string>
    <string name="unNetNoty">网络不可用! 请检查</string>
    <string name="wepNoty">提示: 当前网络的加密方式安全级别较低,建议修改为WPA/WPA2。</string>
</resources>
