<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff313237" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="#ff14446a" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="#ffffffff" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setTime" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_gravity="center_horizontal" android:id="@id/time_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.broadlink.switchproduct.view.WheelView android:id="@id/hour" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <com.broadlink.switchproduct.view.WheelView android:id="@id/mins" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip">
        <Button android:id="@id/save" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/yes" android:layout_weight="5.0" />
        <Button android:id="@id/cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="5.0" />
    </LinearLayout>
</LinearLayout>