<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ViewFlipper android:id="@id/body" android:paddingBottom="50.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:gravity="bottom|center" android:layout_gravity="bottom" android:orientation="horizontal" android:background="@drawable/tab_bottom_bar_bg" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/menu_bar" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:id="@id/tab_system" android:background="@drawable/icon_home_sel" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="10.0dip" android:textColor="#ffffffff" android:ellipsize="marquee" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/xitong" android:singleLine="true" android:marqueeRepeatLimit="1" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/menu_config" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:id="@id/tab_config" android:background="@drawable/icon_more_nor" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="10.0dip" android:textColor="#ffffffff" android:ellipsize="marquee" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/peizhi" android:singleLine="true" android:marqueeRepeatLimit="1" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/menu_serve" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:id="@id/tab_serve" android:background="@drawable/icon_selfinfo_nor" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="10.0dip" android:textColor="#ffffffff" android:ellipsize="marquee" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fuwu" android:singleLine="true" android:marqueeRepeatLimit="1" />
        </LinearLayout>
    </LinearLayout>
</merge>